# PyCreative

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  human.md  pyproject.toml  pytest.ini  tmp_sketch.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  tasks.md
.github/workflows/: ci.yml
docs/: README.md  api-mapping.md  app.md  app_module.md  audio_api.md  cli.md  entrypoint.md  graphics_class.md  input_event.md  media_api.md  mouse.md  observable.md  offscreen.md  package-style.md  pixels.md  pixels_class.md  pixels_image.md  shapes.md  transforms.md  troubleshooting.md  types.md  usage.md
docs/adr/: 0001-skia-gpu-first.md  0002-public-shims-and-package-split.md  0007-skia-gl-backendtexture-fallback.md  0008-centralize-loader-in-cli.md  0008-color-mode-api-boundary.md  0008-engine-refactor.md  0008-presenter-shader-fallback.md  0009-package-export-pattern.md  README.md
docs/developer/: adapter-guidelines.md  color_mode.md  engine.md  engine_refactor.md  gpu_integration.md  keyboard_input.md  loader.md  logging_and_typing.md  mouse_input.md  presenter_gles.md  save_frame.md  skia-gl-probes.md  skia_gpu_quickstart.md  test-suite-knowledge.md
examples/: README.md  audio_example.py  ball_class.py  bezier_example.py  bouncing_ball_example.py  bouncing_balls_class_example.py  cairo_caps_miters_example.py  caps_miters_example.py  capture_webcam_example.py  color_mode_example.py  copy_example.py  cursor_example.py  curve_example.py  debug_mouse_test.py  diagonals_sketch.py  draw_shapes_example.py  example_sketch.py  fill_and_stroke_example.py  font_example.py  graphics_demo.py  graphics_example.py  graphicssurface_example.py  hello_sketch.py  hsb_shape_example.py  image_example.py  input_demo.py  input_example.py  key_pressed_example.py  minimal_example.py  mouse_example.py  mouse_examples.py  mouse_pressed_example.py  noise_2d_example.py  observable_example.py  offscreen_example.py  offscreen_shape_modes_example.py  offscreen_transformations_example.py  opengl_context_example.py  pixels_example.py  pixels_image_copy_example.py  (+12 more)
examples/Bouncing Balls/: ball_class.py  bouncing_balls_class_example.py
examples/blend_modes/: blend_add.py  blend_darkest.py  blend_default.py  blend_difference.py  blend_exclusion.py  blend_lightest.py  blend_multiply.py  blend_replace.py  blend_screen.py  blend_subtract.py
pycreative/: __init__.py  app.py  cli.py  graphics.py  input.py
scripts/: FEATURES.md  README.md  attempt_backend_texture.py  ci-checks.sh  create_feature.py  glfw-skia-gl.py  inspect_skia.py  install_package_hook.sh  probe_skia_gl_ctor.py  pyglet_skia-gl.py  pyglet_skia.py  pyglet_window.py  run_example_headless.py  run_precommit_hooks.sh  run_zero_copy_safe.py  skia_pygame_probe.py  skia_pyglet_fbo_demo.py  test-skia-pyglet-zero-copy-flip.py  test-skia-pyglet-zero-copy.py  test-skia-pyglet.py  try_backend_signatures.py
sketches/: README.md
sketches/TR/: filter.py  main.py  pg.py
specs/dev-refactor/: plan.md  spec.md  tasks.md
specs/sketch-lifecycle/: plan.md  spec.md  tasks.md
src/: __init__.py  fbo.py  main.py  shapes.py
src/api/: color.py  drawing.py  structure.py
src/core/: __init__.py  bootstrap.py  debug.py  engine.py  events.py  graphics.py  renderer.py
src/pycreative/: __init__.py  __main__.py  app.py  assets.py  audio.py  blending.py  capture.py  cli.py  color.py  constants.py  graphics.py  graphicssurface.py  input.py  math.py  media.py  noise.py  observable.py  pixels.py  pmath.py  primitives.py  shape.py  shape_math.py  style.py  transforms.py  types.py  utils.py  vector.py
src/runner/: cli.py  loader.py
tests/: conftest.py  current-regression.md  test_api.py  test_api_programmatic_and_class_sketch.py  test_app.py  test_audio_player.py  test_background_persistence.py  test_basic.py  test_blend_modes.py  test_bootstrap_headless.py  test_clear_hsb.py  test_cli_args.py  test_cli_flags.py  test_color_alpha.py  test_color_hsb_helpers.py  test_color_mode_pending.py  test_constrain.py  test_core.py  test_cursor.py  test_curve.py  test_debounce.py  test_engine_attaches_skia_on_start.py  test_engine_background_start.py  test_engine_lifecycle.py  test_engine_registers_api.py  test_engine_run_loop.py  test_engine_snapshot.py  test_engine_with_renderer.py  test_escape_close.py  test_extensions.py  test_fill_shorthand.py  test_font_lifecycle.py  test_graphics.py  test_graphics_skia_attachment.py  test_graphics_surface.py  test_headless_skia.py  test_image_corners.py  test_image_mode_pending.py  test_input.py  test_input_mouse_hooks.py  (+62 more)
tests/__snapshots__/: README.md
tests/api/: test_placeholder.py
tests/core/: test_attractor_attract_non_mutating.py  test_attractor_drag.py  test_background_api.py  test_background_overloads.py  test_cli_max_frames.py  test_color_api.py  test_constants.py  test_drawing_state.py  test_ellipse_mode.py  test_engine_api.py  test_environment_shims.py  test_fill_alpha_normalization.py  test_fill_stroke_overloads.py  test_frame_rate.py  test_global_tint_replay.py  test_graphics_buffer.py  test_headless_loop.py  test_image_api.py  test_math.py  (+36 more)
tools/: check_package_exports.py  spec_validate_tests.py
(+427 files in other folders)
